--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Mother Goose for Grown-ups
 url: http://www.gutenberg.org/ebooks/50310
